# multiphysics_examples

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  notes.md
.cargo/: config.toml
.github/workflows/: ci.yaml
assets/mapdef/: 1000_cubes.mapdef.ron  2000_cubes.mapdef.ron  around_2000_cubes.mapdef.ron  final.mapdef.ron  no_cubes.mapdef.ron  test_reload.mapdef.ron
assets/vehicledef/: excavator.excavatordef.ron  excavator2.excavatordef.ron  truck.truckdef.ron
crates/bevy_wgsparkl/: Cargo.toml
crates/bevy_wgsparkl/src/: components.rs  lib.rs  prep_vertex_buffer.rs  resources.rs  startup.rs  step.rs
crates/editor/: Cargo.toml  README.md
crates/editor/assets/mapdef/: procedural_13494235624792029799.mapdef.ron
crates/editor/src/: main.rs
crates/editor_map/: Cargo.toml  README.md
crates/editor_map/src/: main.rs
crates/editor_vehicle/: Cargo.toml  README.md
crates/editor_vehicle/src/: main.rs
crates/map_def/: Cargo.toml
crates/map_def/src/: global_assets.rs  lib.rs  map_def.rs  rock.rs
crates/sandbox/: Cargo.toml  README.md
crates/sandbox/assets/: map.mapdef.ron
crates/sandbox/src/: controls.rs  load_level.rs  loading.rs  main.rs  muck_pile.rs  stats_rocks.rs  timer_trigger.rs  ui_gizmo_toggle.rs
crates/sandbox/src/mpm/: mod.rs  setup_particles.rs
crates/sandbox/src/rapier_vehicle_controller/: debug.rs  mod.rs  reflect.rs
crates/sandbox/src/vehicle_spawner/: mod.rs  scoop.rs
crates/shared_map/: Cargo.toml
crates/shared_map/src/: global_assets.rs  lib.rs  map_def.rs  rock.rs
crates/shared_vehicle/: Cargo.toml
crates/shared_vehicle/examples/: rapier_vehicle_controller.rs
crates/shared_vehicle/src/: lib.rs  look_at.rs
crates/shared_vehicle/src/accessory_controls/: mod.rs
crates/shared_vehicle/src/accessory_controls/excavator/: assets.rs  controls.rs  inputs.rs  mod.rs
crates/shared_vehicle/src/accessory_controls/truck/: assets.rs  controls.rs  inputs.rs  mod.rs
crates/shared_vehicle/src/excavator_controls/: assets.rs  controls.rs  inputs.rs  mod.rs
crates/shared_vehicle/src/rapier_vehicle_controller/: debug.rs  mod.rs
crates/shared_vehicle/src/vehicle_spawner/: bulldozer.rs  excavator.rs  follow.rs  mod.rs  override_mass_on_spawn.rs  react_on_scene_instance_ready.rs  scoop.rs  truck.rs
crates/sim_data_loader/: Cargo.toml  README.md
crates/sim_data_loader/examples/: visualize.rs
crates/sim_data_loader/src/: broken_rocks.rs  lib.rs  seb_data.rs  unbroken_rocks.rs
src/: main.rs
src/rapier_vehicle_controller/: mod.rs
