[workspace]
members = ["crates/*"]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1


# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
wgcore = { version = "0.2", git = "https://github.com/dimforge/wgmath", rev = "585486ee4086fd3c12941c592f0ee6c1f5d7a1f7" }
wgebra = { version = "0.2", git = "https://github.com/dimforge/wgmath", rev = "585486ee4086fd3c12941c592f0ee6c1f5d7a1f7" }
wgparry3d = { version = "0.2", git = "https://github.com/dimforge/wgmath", rev = "585486ee4086fd3c12941c592f0ee6c1f5d7a1f7" }
wgrapier3d = { version = "0.2", git = "https://github.com/dimforge/wgmath", rev = "585486ee4086fd3c12941c592f0ee6c1f5d7a1f7" }
wgsparkl3d = { git = "https://github.com/dimforge/wgsparkl", rev = "f45777736d98cf7ec34cf0050e12d37218a9392f" }

#wgcore = { version = "0.2", path = "../wgmath/crates/wgcore" }
#wgebra = { version = "0.2", path = "../wgmath/crates/wgebra" }
#wgparry3d = { version = "0.2", path = "../wgmath/crates/wgparry/crates/wgparry3d" }
#wgrapier3d = { version = "0.2", path = "../wgmath/crates/wgrapier/crates/wgrapier3d" }
#wgsparkl3d = { path = "../wgsparkl/crates/wgsparkl3d" }

[patch.crates-io]
## Custom optimization or last minute upstream changes may be useful.
# rapier3d = { path = "../rapier/crates/rapier3d" }
## This branch contains a hack fix to angular interpolation, which seems to be wrongly computed?
# rapier3d = { path = "../rapier/crates/rapier3d" }
encase = { git = "https://github.com/sebcrozet/encase.git", rev = "6755c1414c225cbeac9fde1ff9394b70d3b05404" }
parry3d = { git = "https://github.com/dimforge/parry.git", rev = "407fb449504dde7ba0a3d80a8de7e37ac991a77a" }
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git", rev = "a4e9343cd75ce2be788280de2c21ed7efb9039b7" }