[package]
name = "bevy_wgsparkl"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
bytemuck = "1"
async-channel = "2"
futures = "0.3"
nalgebra = "0.33"
wgpu = { version = "23", features = ["naga-ir"] }
wgcore = { workspace = true }
wgebra = { workspace = true }
wgparry3d = { workspace = true }
wgrapier3d = { workspace = true }
wgsparkl3d = { workspace = true }
parry3d = "0.18"
bevy_rapier3d = "0.28"
