[package]
name = "map_def"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["multi_threaded", "jpeg"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[dev-dependencies]
bevy = { version = "0.15", features = [
    # Optional for iteration times,
    # see https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional
    "dynamic_linking",
    "serialize",
] }
