[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
bevy = { version = "0.15", features = [
    "multi_threaded",
    # For hot reloading
    "file_watcher",
    # Optional for iteration times,
    # see https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional
    "dynamic_linking",
    "serialize",
    # for wgsparkl
    "shader_format_glsl",
] }
bevy_egui = "0.32"
bevy-inspector-egui = "0.29"
bevy_math = { version = "0.15", features = ["rand"] }
bevy_editor_cam = "0.5.0"
bevy_rapier3d = "0.28"

# For MPM
bytemuck = "1"
async-channel = "2"
futures = "0.3"
nalgebra = "0.33"
wgpu = { version = "23", features = ["naga-ir"] }
wgcore = { workspace = true }
wgebra = { workspace = true }
wgparry3d = { workspace = true }
wgrapier3d = { workspace = true }
wgsparkl3d = { workspace = true }
bevy_wgsparkl = { path = "../bevy_wgsparkl" }
parry3d = "0.18"

# inner crates

shared_map = { path = "../shared_map" }
shared_vehicle = { path = "../shared_vehicle" }
serde = { version = "1.0.217", features = ["derive"] }
