[package]
name = "shared_vehicle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["jpeg", "serialize"] }
bevy_rapier3d = "0.28"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
# bevy is on rand 0.8
rand = "0.8.0"
bevy-inspector-egui = "0.29"
