[package]
name = "sim_data_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
ron = "0.8"
bevy_math = { version = "0.15", features = ["serialize"] }
# inner crates
# shared_map brings bevy dependency, ideally we'd have a feature for no bevy
shared_map = { path = "../shared_map" }

[[bin]]
name = "sim_to_mapdef"
