[package]
name = "sim_data_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
ron = "0.8"
# for Vec3 (should probably be glam, but we're relying on bevy through shared_map so it doesn't matter much right now.
bevy_math = { version = "0.15", features = ["serialize"] }
## for hashmap
bevy_utils = { version = "0.15" }
# inner crates
# shared_map brings bevy dependency, ideally we'd have a feature for no bevy
shared_map = { path = "../shared_map" }
parry3d = "*"


[dev-dependencies]
# Needed for the visualize binary, it should be an independent binary project but 
# https://github.com/rust-lang/cargo/issues/1982 and because we're in a workspace,
# we have to use an example and features. features are not added fto keep it simple.
bevy = "0.15"
bevy_editor_cam = "0.5.0"

[[bin]]
name = "sim_to_mapdef"

[[example]]
name = "visualize"
